fix background image on iphone

--- a/styles/scss/_section-1.scss
+++ b/styles/scss/_section-1.scss
@@ -1,5 +1,5 @@
 .section-1 {
-  background: url("../../assets/images/bg-hero-mobile.jpg") no-repeat center center fixed;
+  background: url("../../assets/images/bg-hero-mobile.jpg") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
