--- a/styles/styles.css
+++ b/styles/styles.css
@@ -227,7 +227,7 @@ button:active {
 }
 
 .section-1 {
-  background: url("../../assets/images/bg-hero-mobile.jpg") no-repeat center center fixed;
+  background: url("../../assets/images/bg-hero-mobile.jpg") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
